* veth network interfaces are no longer shown in the rAPA configuration interface. (RAA-1627)
* startImageJob() for imageless builds no longer returns an error when called 
  over xmlrpc. (RBL-3885)
* Package creator now works with external products that require entitlements
  for access. (RBL-3956)
* Better handling of undefined image types for a given platform. (RBL-3965)

Changes in 4.1.3:
================

Bug Fixes
---------------------
* A bug in purging the stompserver message queue when a large number of files
  are present has been fixed (RBL-3472).
* Rerunning the rbuilder initial setup no longer resets the internal
  password, as that caused previously created repositories to become
  unavailable. (RBL-3344)

Changes in 4.1.2:
================

Web Front End Changes
---------------------
* The versions of special troves used to build an Installable
  ISO is now displayed in the image build's detail page. (RBL-2600)
* A new page will require the acceptance of the rPath terms of service prior 
  to initial setup. (RBL-3213)
* Terms of service and privacy policy links now open in new tabs/windows.

Bug Fixes
---------------------
* The default search settings in the web interface was not being set
  properly, causing no radio buttons to be selected in the interface.
  This has been corrected. (RBL-3002)
* Fixed a bug preventing admin users from being able to browse the
  repository for private products they are not members of. (RBL-3108)
* The edit external products page now retrieves the correct label
  information in all cases. (RBL-3179)
* Fixed a bug with UI rendering in the MCP Console Plug-in on IE 6. (RBL-3401)


Changes in 4.1.1
================

Web Front End Changes
---------------------

* The "Domain Name" field, which was removed from the "New Product"
  page in version 4.1.0, has been restored. (RBL-3037)

Bug Fixes
---------------------

* Extra troves such as anaconda-custom selected through the web