@@ -29,6 +29,13 @@ class SearchHelperTest(unittest.TestCase):
             searcher.parseTerms("server=conary.rpath.com"),
             ([], ['server=conary.rpath.com']))
 
+        self.failUnlessEqual(
+            searcher.parseTerms("server=conary.rpath.com", ['server']),
+            ([], ['server=conary.rpath.com']))
+        self.failUnlessEqual(
+            searcher.parseTerms("server=conary.rpath.com", ['server2']),
+            (['server=conary.rpath.com'], []))
+
     def testLimitersToSQL(self):
         self.failUnlessEqual(
             searcher.limitersToSQL(["server=conary.rpath.com"], pkgindex.termMap),
@@ -259,6 +266,7 @@ class BrowseTest(fixtures.FixturedUnitTest):
         self.failUnlessEqual(client.getPackageSearchResults('foo')[1], 2)
         self.failUnlessEqual(client.getPackageSearchResults('barbot')[1], 2)
         self.failUnlessEqual(client.getPackageSearchResults(':source')[1], 1)
+        self.failUnlessEqual(client.getPackageSearchResults('foo=conary.rpath.com@rpl:1')[1], 0)
 
     @fixtures.fixture("Full")
     def testSearchProjectsWithBuilds(self, db, data):
